2003-02-25  Yuriy Syrota  <rasta renome.rovno.ua>

	* configure.in: Added "uk" (Ukrainian) to ALL_LINGUAS.

2003-02-24  Mikael Hallendal  <micke@codefactory.se>

	* libegg/toolbar/Makefile.am: dist-check fixes.

	* dtd/Makefile.am (dtddir): removed all the unused dtd-files from
	  dtd_DATA 

	* configure.in: bumped version to 0.5, soon gonna release, I
	  promise

	* Makefile.am (EXTRA_DIST): don't include idl/* in EXTRA_DIST.

2003-02-19  James Henstridge  <james@daa.com.au>

	* src/dh-html-gtkhtml2.c (html_init): put the html widget in a
	scrolled window, so that the GtkHTML2 view will be scrollable.
	(dh_html_get_widget): return the scrolled window instead of the
	html widget.

2003-02-19  Dmitry G. Mastrukov  <dmitry@taurussoft.org>

	* configure.in: Added Belarusian to ALL_LINGUAS.

2003-02-18  Ross Burton  <ross@burtonini.com>

	* src/dh-parser.c (parser_end_node_cb): Reverse the nodes which
	were backwards, as they were appended for speed.

	* src/dh-base.c (base_init_books): Look in
	/usr/share/gtk-doc/html/ and ~/.devhelp2/books/ for books.

2003-02-17  Ross Burton  <ross@burtonini.com>	

	* src/dh-base.c (base_init_books): Search DEVHELP_SEARCH_PATH for
	books.

	* src/dh-html-gtkhtml2.c (html_reader_thread): Return NULLs.

	* src/dh-main.c: Remove unused variables and add more includes.

	* src/dh-base.c: Ditto.

	* src/dh-base.h: Rename a method so it matches the implementation.

2003-02-15  Mikael Hallendal  <micke@codefactory.se>

	* src/dh-window.c:
	- Fixed a number of compile warnings.
	(window_activate_action): 
	- actually do something when forward/back are pressed.

	* configure.in: added warnings

	* src/dh-search.c (search_filter_idle): 
	- Emit link selected if exact match was returned form keyword
	  model.

	* src/dh-keyword-model.c (dh_keyword_model_filter): 
	- Return Link if exact hit (one item in hit list).

	* src/dh-window.c: 
	- updated to changes when DhHtml is no longer a subclass of
	  HtmlView.

	* src/dh-html-mozilla.c: 